# tlib

./: .gitignore  CMakeLists.txt  CMakePresets.json  DataStructures.hpp  EASTL.hpp  Files.hpp  LICENSE  Logger.hpp  Logging.hpp  Macros.hpp  Math.hpp  Misc.hpp  Pointers.hpp  README.md  RNG.hpp  Resolve.hpp  Snippets.hpp  String.hpp  StringHelpers.hpp  TLib-config.cmake  TLib-targets.cmake  Threading.hpp  Timer.hpp  tlib.cpp  tlib.sln  tlib.vcxproj  tlib.vcxproj.filters  vcpkg requirements.txt
Demos/: CMakeLists.txt
Demos/Asteroids/: CMakeLists.txt  main.cpp
Demos/Pong/: CMakeLists.txt  main.cpp
Demos/TurnBasedGame/: CMakeLists.txt  main.cpp
Embedder/: embedder.cpp
Embedder/test/: 2d.frag  2d.vert
Game/: ECS.hpp  Engine.hpp  Game.hpp  GameObject.hpp  Node.hpp  Resource.hpp  Sprite2D.hpp  StateMan.hpp  TextureManager.hpp  Transform2D.hpp
MediaGL/: Debug.hpp  FPSLimit.hpp  Font.hpp  FrameBuffer.hpp  GLHelpers.hpp  GLState.hpp  GameTemplate.hpp  ImGui.hpp  ImGuiFileDialog.hpp  ImGuiThemes.hpp  ImGuiWidgets.hpp  Input.hpp  MediaPlayer.hpp  Misc.hpp  NanoVG.hpp  RenderTarget.hpp  Renderer.hpp  SDLEventToStr.hpp  SSBO.hpp  Shader.hpp  SysQuery.hpp  Texture.hpp  TextureManager.hpp  VertexArray.hpp  VertexBuffer.hpp  View.hpp  Window.hpp
Scripting/: ScriptBuilder.hpp  Scripting.hpp
Scripting/LUA/: LuaScripting.hpp
TLib/: Convert.hpp  DataStructures.hpp  Defer.hpp  EASTL.hpp  Errors.hpp  Event.hpp  Files.hpp  Function.hpp  LimitedStack.hpp  Logging.hpp  Macros.hpp  Math.hpp  Misc.hpp  NonAssignable.hpp  Physics3D.hpp  Pointers.hpp  RNG.hpp  Range.hpp  String.hpp  Threading.hpp  Windows.hpp  main.cpp
TLib/Containers/: AStar2D.hpp  Array.hpp  Bitset.hpp  Colony.hpp  Deque.hpp  FixedVector.hpp  GridMap2D.hpp  Hive.hpp  InitializerList.hpp  LimitedStack.hpp  List.hpp  Map.hpp  Optional.hpp  Pair.hpp  PointerVector.hpp  Queue.hpp  Ref.hpp  Set.hpp  Span.hpp  Stack.hpp  Tuple.hpp  UnorderedMap.hpp  UnorderedSet.hpp  Variant.hpp  Vector.hpp
TLib/ECS/: ECS.hpp  MeshInstance3D.hpp  Physics3D.hpp  Scene.hpp
TLib/Embed/: Embed.hpp
TLib/Embed/Shaders/: 2d.frag  2d.vert  3d.frag  3d.vert  3d_primitive.frag  3d_primitive.vert  3d_skeleton.vert  csm.geom  csm.vert  light.vert  sdf_text.frag
TLib/Game/: ECS.hpp  Engine.hpp  GameObject.hpp  Node.hpp  Node2D.hpp  Resource.hpp  Sprite2D.hpp  StateMan.hpp  TextureManager.hpp  Transform2D.hpp
TLib/Media/: Box2D.hpp  Camera2D.hpp  Camera2DDebug.hpp  Frustum.hpp  Helpers.hpp  ImGui.hpp  ImGuiFileDialog.hpp  ImGuiWidgets.hpp  Logging.hpp  MediaPlayer.hpp  RenderTarget.hpp  Renderer.hpp  Renderer2D.hpp  Renderer3D.hpp  Transform3D.hpp  View.hpp  View3D.hpp
TLib/Media/GL/: ElementBuffer.hpp  FrameBuffer.hpp  GLHelpers.hpp  GLState.hpp  IBuffer.hpp  Layout.hpp  Shader.hpp  ShaderStorageBuffer.hpp  UniformBuffer.hpp  VertexArray.hpp  VertexBuffer.hpp
TLib/Media/GUI/: ActionEvent.cpp  ActionEvent.hpp  ActionListener.cpp  ActionListener.hpp  Agui.hpp  BaseTypes.cpp  BaseTypes.hpp  BlinkingEvent.cpp  BlinkingEvent.hpp  BorderLayout.cpp  BorderLayout.hpp  Color.cpp  Color.hpp  CursorProvider.cpp  CursorProvider.hpp  Dimension.cpp  Dimension.hpp  EmptyWidget.cpp  EmptyWidget.hpp  EventArgs.cpp  EventArgs.hpp  FlowLayout.cpp  FlowLayout.hpp  FocusListener.cpp  FocusListener.hpp  FocusManager.cpp  FocusManager.hpp  Font.cpp  Font.hpp  FontLoader.hpp  Graphics.cpp  Graphics.hpp  GridLayout.cpp  GridLayout.hpp  Gui.cpp  Gui.hpp  Image.cpp  Image.hpp  ImageLoader.hpp  Input.cpp  (+30 more)
TLib/Media/GUI/Backends/TLib/: TLib.hpp  TLibFont.hpp  (+5 more)
TLib/Media/GUI/Clipboard/: Clipboard.cpp  Clipboard.hpp  OSXClipboard.hpp  OSXClipboard.mm  WinClipboard.cpp  WinClipboard.hpp
TLib/Media/Platform/: FPSLimit.hpp  Input.hpp  SDL2.hpp  SDLEventToStr.hpp  SysQuery.hpp  Window.hpp
TLib/Media/Resource/: Asset.hpp  Font.hpp  GPUVertexData.hpp  IResource.hpp  Mesh.hpp  MeshData.hpp  Skeleton.hpp  Texture.hpp  TextureData.hpp  TextureStitcher.hpp
TLib/Scripting/: Logging.hpp
TLib/Scripting/AngelScript/: AngelScript.hpp  Logging.hpp  ScriptBuilder.hpp
TLib/Types/: Circle.hpp  ColorHSVf.cpp  ColorHSVf.hpp  ColorRGBAf.hpp  ColorRGBAi.hpp  ColorRGBf.cpp  ColorRGBf.hpp  ColorRGBi.hpp  Mat4.hpp  Quat.hpp  Rect.hpp  Types.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
Tests/: AStar2D.cpp  Box2D.cpp  CMakeLists.txt  Camera2D.cpp  Common.hpp  Construct.cpp  FBOTest.cpp  FunkyTriangle.cpp  FunkyTriangle3D.cpp  GUI.cpp  GridMap2D.cpp  Indices.cpp  MinimalExample.cpp  Model.cpp  NinePatchTest.cpp  SFMLTest.cpp  Scripting.cpp  SimpleSpriteTest.cpp  SpriteRenderer.cpp  Text.cpp  Water.cpp
Tests/assets/: franklin.blend  franklin.blend1  franklin.glb  scripting.as  scuffed_construct.glb  space_station.glb  test.blend  test.blend1
Tests/assets/backpack/: source_attribution.txt
Tests/assets/gm_construct/: Attribution.txt
Tests/assets/test levels/: test lvl.mtl
old/: pathfindexamples.hpp
old/Media/: Box2DDebugDraw.h  GameTemplate.hpp  ImGui.hpp  ImGuiWidgets.hpp  Media.hpp  MediaPlayer.hpp  Renderer.hpp  TextureManager.hpp  Window.hpp
old/Media bad/: ImGui.hpp  SFDML.hpp  TextureCache.hpp
old/Media magnum/: GameTemplate.hpp  Input.hpp  Texture.hpp  View.hpp  Window.hpp
scripts/: getsrc.py
sfmlhelp/: InputManager.hpp
tlib/: DataStructures.hpp  Event.hpp  Files.hpp  Logger.hpp  Macros.hpp  Math.hpp  NonAssignable.hpp  Pathfind.hpp  RNG.hpp  SFMLDebugDraw.cpp  SFMLDebugDraw.hpp  SFMLHelpers.hpp  StateMan.hpp  StringHelpers.hpp  Timer.hpp  Vector2D.hpp  tlib.cpp  tlib.vcxproj  tlib.vcxproj.filters
tlib/Media/: Box2DDebugDraw.h  Event.hpp  Font.hpp  GameTemplate.hpp  ImGui.hpp  Media.hpp  Nuklear.hpp  Renderer.hpp  Texture.hpp  Window.hpp
tlib/Media3/: Helpers.hpp  ImGui.hpp  Input.hpp  RenderTarget.hpp  Renderer.hpp  Shader.hpp  Template.hpp  Text.hpp  Texture.hpp  TextureCache.hpp  View.hpp  Window.hpp
tlib/Media4/: ImGui.hpp  Input.hpp  SFDML.hpp
tlib/old/Media/: Event.hpp  Font.hpp  GameTemplate.hpp  ImGui.hpp  ImGuiWidgets.hpp  Input.hpp  Packet.hpp  Renderer.hpp
tlib/old/MediaV2/: Core.hpp  Renderer.hpp  SDLWindowOld.hpp
tlib/wip/: Vector2D.hpp
(+70 files in other folders)
